--- a/CSS/index.css
+++ b/CSS/index.css
@@ -87,7 +87,7 @@ body {
 
 
 .Products {
-    margin-top: 100px;
+    margin-top: 40px;
 }
 
 .Products h3 {
@@ -280,7 +280,8 @@ body {
 }
 
 .accordionSection {
-    margin-top: 30px;
+    margin: 30px 0 80px 0;
+
 }
 
 .accordionSection h2 {
@@ -427,7 +428,7 @@ body {
 }
 
 .networking {
-    margin-top: 80px;
+    margin: 80px 0;
 }
 
 .networking img {
@@ -493,9 +494,61 @@ body {
     margin: 15px;
 }
 
-html {
-    scroll-behavior: smooth;
+.Contact {
+    /* background-color: antiquewhite; */
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
+.Contact button {
+    width: 100px;
+    cursor: pointer;
+    margin-top: 10px;
+    height: 35px;
+    border-radius: 4px;
+    border: 1px solid black;
+    color: black;
+    font-size: 14px;
+}
+
+.form {
+    background-color: white;
+    width: 500px;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.label {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.label input {
+    outline: none;
+    height: 35px;
+    padding-left: 5px;
+    color: black;
+    width: 100%;
+}
+
+.label textarea {
+    color: black;
+    padding-left: 5px;
+    outline: none;
+    resize: none;
+    width: 100%;
+    height: 100px;
+}
+
+.label label {
+    color: black;
+}
+
+
 
 @media (max-width:1450px) {
     .offersBox {
@@ -620,4 +673,9 @@ html {
         height: 500px;
         margin-top: 40px;
     }
+
+    .form {
+        width: 300px;
+    }
+
 }
